--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,9 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <meta name="viewport" content="width=device, initial-scale=1">
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-       
+       {# daouda  #}
+
+       <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -15,6 +17,8 @@
         {% endblock %}
     </head>
     <body>
+    {% include 'base/navbar.html.twig' %}
         {% block body %}{% endblock %}
+    {% include 'base/footer.html.twig' %}
     </body>
 </html>
