data for post et views

--- a/templates/home/blogpost.html.twig
+++ b/templates/home/blogpost.html.twig
@@ -3,6 +3,9 @@
 	<div class="container "> 
   <h2 class="bg-info text-white text-bold text-uppercase text-italic text-center pt-3 mt-2"> Dernières réalisations </h2>
 		<div class="card mb-3">
+		{% for realisation in realisations %}
+			
+		{% endfor %}
 			<div class="row g-0">
 				<div class="col-md-4">
 					<img src="https://iamage.fr/images/secure/ez4eGO/ccVfseB1pd50xKR_1676680591.jpg" class="img-fluid rounded-start" alt="...">
