--- a/templates/home/realisations.html.twig
+++ b/templates/home/realisations.html.twig
@@ -1,44 +1,21 @@
-<div id="carouselExampleCaptions" class="carousel slide">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="assets/images/logo.png" class="d-block w-100" alt="..." style="height: 450px; width:450px">
-      <div class="carousel-caption d-none d-md-block mt-5">
-       <p>Some representative placeholder content for the first slide.</p>
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
-     
-      </div>
-    </div>
-    <div class="carousel-item">
-    <img src="assets/images/logo.png" class="d-block w-100" alt="..." style="height: 450px; width:450px">
-      <div class="carousel-caption d-none d-md-block mt-5">
-       <p>Some representative placeholder content for the first slide.</p>
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
-     
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="assets/images/logo.png" class="d-block w-100" alt="..." style="height: 450px; width:450px">
-      <div class="carousel-caption d-none d-md-block mt-5">
-       <p>Some representative placeholder content for the first slide.</p>
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
-     
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
+<div class="card-group">
+	{% for peinture in peintures %}
+		<div class="card m-5">
+			<img src=" {{peinture.file}}  " class="card-img-top" alt="..." style=" margin:auto; ">
+			<div class="card-body">
+				<h5 class="card-title">
+					{{peinture.nom }}
+				</h5>
+				<p class="card-text">
+					{{peinture.description | u.truncate(200, '...', false )}}
+				</p>
+			</div>
+			<div class="card-footer mb-4">
+				<small class="text-body-secondary">Ajoutée :
+					{{peinture.createdAt | date('d/m/Y') }}
+				</small>
+			</div>
+		</div>
+
+	{% endfor %}
 </div>
