--- a/templates/home/blogpost.html.twig
+++ b/templates/home/blogpost.html.twig
@@ -27,7 +27,7 @@
 								{{blogpost.contenu | u.truncate(200, '...', false ) }}
 							</p>
 							<p class="card-text">
-								<small class="text-body-secondary">Date :  {{blogpost.createdAt | date('d/m/Y')}} </small>
+								<small class="text-body-secondary">Publiée le :  {{blogpost.createdAt | date('d/m/Y')}} </small>
 							</p>
 						</div>
 					</div>
