blogpost et realisation on views on their controllers

--- a/templates/base/navbar.html.twig
+++ b/templates/base/navbar.html.twig
@@ -6,7 +6,7 @@
 				<a href="#" class="nav-link">Repare Moi </a>
 			</li>
 			<li class="nav-item">
-				<a href="#" class="nav-link">Réalisations </a>
+				<a href="{{path('app_realisations')}}" class="nav-link">Réalisations </a>
 			</li>
 			<li class="nav-item">
 				<a href="#" class="nav-link"> Actualités  </a>
