--- a/templates/base/navbar.html.twig
+++ b/templates/base/navbar.html.twig
@@ -9,7 +9,7 @@
 				<a href="{{path('app_realisations')}}" class="nav-link">Réalisations </a>
 			</li>
 			<li class="nav-item">
-				<a href="#" class="nav-link"> Actualités  </a>
+				<a href="{{path('app_actualites')}}" class="nav-link"> Actualités  </a>
 			</li>
 			<li class="nav-item">
 				<a href="#" class="nav-link"> Portefolio   </a>
