--- a/templates/peinture/realisations.html.twig
+++ b/templates/peinture/realisations.html.twig
@@ -5,7 +5,11 @@
 
 {% block body %}
 
-
+   <div class="row row-cols-1 row-cols-md-3 g-4 mt-5 mb-2 container w-100 m-auto text-center p-3">
+		<h3 class="text-center text-bold text-uppercase m-auto text-danger " >
+			Dernières réalisations
+		</h3>
+	</div>
 	<div class="row row-cols-1 row-cols-md-3 g-4 mt-5 mb-2 container w-100 m-auto">
 		{% for peinture in peintures %}
 			<a href="">
