page à propos du user

--- a/templates/base/footer.html.twig
+++ b/templates/base/footer.html.twig
@@ -4,8 +4,9 @@
       <div class="footer-item">
         <h2 class="footer-title">Informations  </h2>
         <div class="footer-items">
-          <h3>Accueil </h3>
-          <h3>Réalisations </h3>
+          <h3><a class="text-decoration-none text-white text-bold" href="{{path('app_home')}}">Accueil </a></h3>
+          <h3><a class="text-decoration-none text-white text-bold" href="{{path('app_realisations')}}">Réalisations </a> </h3>
+          <h3><a class="text-decoration-none text-white text-bold" href="{{path('app_apropos')}}">A propos </a> </h3>
           <h3>Contacts </h3>
         </div>
       </div>
