--- a/templates/base/navbar.html.twig
+++ b/templates/base/navbar.html.twig
@@ -15,7 +15,7 @@
 				<a href="#" class="nav-link"> Portefolio   </a>
 			</li>
 			<li class="nav-item">
-				<a href="#" class="nav-link"> A propos   </a>
+				<a href="{{path('app_apropos')}}" class="nav-link"> A propos   </a>
 			</li>
 		
 			<li class="nav-item">
