--- a/templates/base/navbar.html.twig
+++ b/templates/base/navbar.html.twig
@@ -12,7 +12,7 @@
 				<a href="{{path('app_actualites')}}" class="nav-link"> Actualités  </a>
 			</li>
 			<li class="nav-item">
-				<a href="#" class="nav-link"> Portefolio   </a>
+				<a href="{{path('app_portefolio')}}" class="nav-link"> Portefolio   </a>
 			</li>
 			<li class="nav-item">
 				<a href="{{path('app_apropos')}}" class="nav-link"> A propos   </a>
